Revision history for Mojolicious-Plugin-LinkEmbedder

0.06
       * Add DISCLAIMER section
       * Add COPYRIGHT section

0.05     Tue Jun 10 17:16:41 2014
       * Fix embedding Text::GistGithub

0.04     Wed Apr  2 20:14:02 2014
       * Fix embedding tweets

0.03     Mon Feb 17 15:51:14 2014
       * Will only render parseable URLs

0.02     Fri Feb 14 10:33:18 2014
       * Add optional default action

0.01     Fri Feb 14 10:18:47 2014
       * Add embed_link() helper
       * Add LinkEmbedder::Default
       * Add LinkEmbedder::Youtube