@@ -2,9 +2,10 @@ use t::App;
 use Test::More;
 
 $t->get_ok('/embed?url=https://gist.github.com/jhthorsen/6449446')
-  ->element_exists("div#link_embedder_text_gist_github_1", 'div added')
-  ->content_like(qr{createElement\('iframe'\);}, 'got iframe')
-  ->content_like(qr{writeln\('<html><body style="padding:0;margin:0" onload="parent\.linkembedderiframesize1\(document\.body\.scrollHeight\)"><script src="https://gist\.github\.com/jhthorsen/6449446\.js"><\\/script><\\/body><\\/html>'\);}, 'writeln')
+  ->element_exists(q(div#link_embedder_text_gist_github_1), 'container tag')
+  ->element_exists(q(script[src="https://gist.github.com/jhthorsen/6449446.json?callback=_linkembedder_textgistgithub1"]), 'json script tag')
+  ->content_like(qr{window\._linkembedder_textgistgithub1=function}, '_linkembedder_textgistgithub1()')
+  ->content_like(qr{document\.getElementById\('link_embedder_text_gist_github_1'\)\.innerHTML=g\.div}, 'g.div')
   ;
 
 $t->get_ok('/embed?url=https://gist.github.com/jhthorsen')
