@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-LinkEmbedder
 
 0.06
+       * Allow custom stylesheet for Text::GistGithub
        * Add DISCLAIMER section
        * Add COPYRIGHT section
 
